--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.1.0",
-        "illuminate/support": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*|9.*",
-        "illuminate/http": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*|9.*"
+        "php": ">=8.1.0",
+        "illuminate/support": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*|9.*|10.*",
+        "illuminate/http": "5.6.*|5.7.*|5.8.*|6.*|7.*|8.*|9.*|10.*"
     },
     "autoload": {
         "psr-4": {
